--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
         <nav>
           <ul class="menu menu-main">
             <li class="current">
-              <a href="/">Home</a>
+              <a href="/NSpec/">Home</a>
             </li>
             <li><a href="/NSpec/continuoustesting">Continuous Testing</a></li>
             <li><a href="https://github.com/mattflo/NSpec/issues">Feedback</a></li>
