--- a/_includes/before.html
+++ b/_includes/before.html
@@ -1,4 +1,9 @@
-<pre id="describe_before_code" data-timestamp="2012-06-23 17:04:54 -0500" class="brush: csharp;">using NSpec;
+<p><a name="before"></a></p>
+<div class="zone zone-sub-page-title">
+<h1>before</h1>
+</div>
+<div id="layout-content" class="group" style="padding-top: 10px;">
+<pre id="describe_before_code" data-timestamp="2012-06-23 17:21:20 -0500" class="brush: csharp;">using NSpec;
 
 class describe_before : nspec
 {
@@ -13,10 +18,11 @@ class describe_before : nspec
     int number;
 }
 </pre>
-<pre id="describe_before_output" data-timestamp="2012-06-23 17:04:54 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe before
+<pre id="describe_before_output" data-timestamp="2012-06-23 17:21:20 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe before
   they run before each example
     number should be 2
     number should be 1
 
 2 Examples, 0 Failed, 0 Pending
-</pre>
+</pre>
+</div>
