--- a/_includes/my_first_spec.html
+++ b/_includes/my_first_spec.html
@@ -1,4 +1,9 @@
-<pre id="my_first_spec_code" data-timestamp="2012-06-23 17:04:57 -0500" class="brush: csharp;">﻿using NSpec;
+<p><a name="my first spec"></a></p>
+<div class="zone zone-sub-page-title">
+<h1>my first spec</h1>
+</div>
+<div id="layout-content" class="group" style="padding-top: 10px;">
+<pre id="my_first_spec_code" data-timestamp="2012-06-23 17:21:23 -0500" class="brush: csharp;">﻿using NSpec;
 
 class my_first_spec : nspec
 {
@@ -8,9 +13,10 @@ class my_first_spec : nspec
     }
 }
 </pre>
-<pre id="my_first_spec_output" data-timestamp="2012-06-23 17:04:57 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">my first spec
+<pre id="my_first_spec_output" data-timestamp="2012-06-23 17:21:23 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">my first spec
   given the world has not come to an end
     Hello World should be Hello World
 
 1 Examples, 0 Failed, 0 Pending
-</pre>
+</pre>
+</div>
