--- a/_includes/class_level.html
+++ b/_includes/class_level.html
@@ -1,4 +1,9 @@
-<pre id="describe_class_level_code" data-timestamp="2012-06-23 17:04:55 -0500" class="brush: csharp;">﻿using NSpec;
+<p><a name="class level"></a></p>
+<div class="zone zone-sub-page-title">
+<h1>class level</h1>
+</div>
+<div id="layout-content" class="group" style="padding-top: 10px;">
+<pre id="describe_class_level_code" data-timestamp="2012-06-23 17:21:21 -0500" class="brush: csharp;">﻿using NSpec;
 
 class describe_class_level : nspec
 {
@@ -22,8 +27,9 @@ class describe_class_level : nspec
     string sequence;
 }
 </pre>
-<pre id="describe_class_level_output" data-timestamp="2012-06-23 17:04:55 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe class level
+<pre id="describe_class_level_output" data-timestamp="2012-06-23 17:21:21 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe class level
   specify given befores and acts run in the correct sequence
 
 1 Examples, 0 Failed, 0 Pending
-</pre>
+</pre>
+</div>
