--- a/_includes/specifications.html
+++ b/_includes/specifications.html
@@ -1,4 +1,9 @@
-<pre id="describe_specifications_code" data-timestamp="2012-06-23 17:04:56 -0500" class="brush: csharp;">using NSpec;
+<p><a name="specifications"></a></p>
+<div class="zone zone-sub-page-title">
+<h1>specifications</h1>
+</div>
+<div id="layout-content" class="group" style="padding-top: 10px;">
+<pre id="describe_specifications_code" data-timestamp="2012-06-23 17:21:23 -0500" class="brush: csharp;">using NSpec;
 
 class describe_specifications : nspec
 {
@@ -22,7 +27,7 @@ class describe_specifications : nspec
     object someObject = null;
 }
 </pre>
-<pre id="describe_specifications_output" data-timestamp="2012-06-23 17:04:56 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe specifications
+<pre id="describe_specifications_output" data-timestamp="2012-06-23 17:21:23 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe specifications
   when creating specifications
     true should be false - FAILED - Expected: False, But was: True
     enumerable should be empty
@@ -40,23 +45,24 @@ class describe_specifications : nspec
 
 nspec. describe specifications. when creating specifications. true should be false.
 Expected: False, But was: True
-   at describe_specifications.&lt;when_creating_specifications&gt;b__0() in C:\Development\NSpec\Sam...
+   at describe_specifications.&lt;when_creating_specifications&gt;b__0() in c:\Development\NSpec\Sam...
 
 nspec. describe specifications. when creating specifications. enumerable should not contain 1.
 Expected: not collection containing 1, But was: &lt; 1 &gt;
-   at describe_specifications.&lt;when_creating_specifications&gt;b__3() in C:\Development\NSpec\Sam...
+   at describe_specifications.&lt;when_creating_specifications&gt;b__3() in c:\Development\NSpec\Sam...
 
 nspec. describe specifications. when creating specifications. 1 should be 2.
 Expected: 2, But was: 1
-   at describe_specifications.&lt;when_creating_specifications&gt;b__4() in C:\Development\NSpec\Sam...
+   at describe_specifications.&lt;when_creating_specifications&gt;b__4() in c:\Development\NSpec\Sam...
 
 nspec. describe specifications. when creating specifications. 1 should not be 1.
 Expected: not 1, But was: 1
-   at describe_specifications.&lt;when_creating_specifications&gt;b__6() in C:\Development\NSpec\Sam...
+   at describe_specifications.&lt;when_creating_specifications&gt;b__6() in c:\Development\NSpec\Sam...
 
 nspec. describe specifications. when creating specifications. some object should not be null.
 Expected: not null, But was: null
-   at describe_specifications.&lt;when_creating_specifications&gt;b__9() in C:\Development\NSpec\Sam...
+   at describe_specifications.&lt;when_creating_specifications&gt;b__9() in c:\Development\NSpec\Sam...
 
 11 Examples, 5 Failed, 0 Pending
-</pre>
+</pre>
+</div>
