moved summary section into content area, fixed syntax highlighting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,9 +54,6 @@
       <div id="content" class="group">
         <div id="layout-content" class="group">
           {{ content }}
-        </div>
-      </div>
-    </div>
 
 <p><a name="summary"></a></p>
 <div class="zone zone-sub-page-title">
@@ -84,12 +81,16 @@
 </li>
 </ul>
 </div>
+        </div>
+      </div>
+    </div>
+
 
     <div id="layout-footer" class="group">
         <footer id="footer"><div id="footer-sig" class="group">
         </footer>
     </div>
-    <script type="text/javascript">syntaxHighlight('/Modules/Heikura.SyntaxHighlighter/Scripts/')</script><script type="text/javascript">
+    <script type="text/javascript">syntaxHighlight('/NSpec/Modules/Heikura.SyntaxHighlighter/Scripts/')</script><script type="text/javascript">
 
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-22221376-1']);
