--- a/_includes/class_level.html
+++ b/_includes/class_level.html
@@ -1,9 +1,9 @@
-<p><a name="class level"></a></p>
+<p><a name="class_level"></a></p>
 <div class="zone zone-sub-page-title">
 <h1>class level</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_class_level_code" data-timestamp="2012-06-23 17:43:03 -0500" class="brush: csharp;">﻿using NSpec;
+<pre id="describe_class_level_code" data-timestamp="2012-06-23 17:55:59 -0500" class="brush: csharp;">﻿using NSpec;
 
 class describe_class_level : nspec
 {
@@ -27,7 +27,7 @@ class describe_class_level : nspec
     string sequence;
 }
 </pre>
-<pre id="describe_class_level_output" data-timestamp="2012-06-23 17:43:03 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe class level
+<pre id="describe_class_level_output" data-timestamp="2012-06-23 17:55:59 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe class level
   specify given befores and acts run in the correct sequence
 
 1 Examples, 0 Failed, 0 Pending
