--- a/_includes/contexts.html
+++ b/_includes/contexts.html
@@ -1,4 +1,9 @@
-<pre id="describe_contexts_code" data-timestamp="2012-06-23 15:08:44 -0500" class="brush: csharp;">using NSpec;
+<p><a name="contexts"></a></p>
+<div class="zone zone-sub-page-title">
+<h1>contexts</h1>
+</div>
+<div id="layout-content" class="group" style="padding-top: 10px;">
+<pre id="describe_contexts_code" data-timestamp="2012-06-30 21:43:08 -0500" class="brush: csharp;">using NSpec;
 
 class describe_contexts : nspec
 {
@@ -23,7 +28,7 @@ class describe_contexts : nspec
     private Account account;
 }
 </pre>
-<pre id="describe_contexts_output" data-timestamp="2012-06-23 15:08:44 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe contexts
+<pre id="describe_contexts_output" data-timestamp="2012-06-30 21:43:08 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe contexts
   describe Account
     when withdrawing cash
       account is in credit
@@ -32,4 +37,5 @@ class describe_contexts : nspec
         the Account does not dispense cash
 
 2 Examples, 0 Failed, 0 Pending
-</pre>
+</pre>
+</div>
