--- a/_includes/helpers.html
+++ b/_includes/helpers.html
@@ -1,4 +1,9 @@
-<pre id="describe_helpers_code" data-timestamp="2012-06-23 15:08:44 -0500" class="brush: csharp;">using NSpec;
+<p><a name="helpers"></a></p>
+<div class="zone zone-sub-page-title">
+<h1>helpers</h1>
+</div>
+<div id="layout-content" class="group" style="padding-top: 10px;">
+<pre id="describe_helpers_code" data-timestamp="2012-06-30 21:43:09 -0500" class="brush: csharp;">using NSpec;
 
 class describe_helpers : nspec
 {
@@ -21,7 +26,7 @@ class describe_helpers : nspec
     }
     Tea tea;
 }</pre>
-<pre id="describe_helpers_output" data-timestamp="2012-06-23 15:08:44 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe helpers
+<pre id="describe_helpers_output" data-timestamp="2012-06-30 21:43:09 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe helpers
   when making tea
     that is 210 degrees
       should be hot
@@ -29,4 +34,5 @@ class describe_helpers : nspec
       should be cold
 
 2 Examples, 0 Failed, 0 Pending
-</pre>
+</pre>
+</div>
