--- a/_includes/pending.html
+++ b/_includes/pending.html
@@ -1,4 +1,9 @@
-<pre id="describe_pending_code" data-timestamp="2012-06-23 15:08:45 -0500" class="brush: csharp;">using NSpec;
+<p><a name="pending"></a></p>
+<div class="zone zone-sub-page-title">
+<h1>pending</h1>
+</div>
+<div id="layout-content" class="group" style="padding-top: 10px;">
+<pre id="describe_pending_code" data-timestamp="2012-06-30 21:43:10 -0500" class="brush: csharp;">using NSpec;
 
 class describe_pending : nspec
 {
@@ -10,10 +15,11 @@ class describe_pending : nspec
     }
 }
 </pre>
-<pre id="describe_pending_output" data-timestamp="2012-06-23 15:08:45 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe pending
+<pre id="describe_pending_output" data-timestamp="2012-06-30 21:43:10 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe pending
   when creating pending specifications
     pending spec - PENDING
     &quot;&quot; should be &quot;something else&quot; - PENDING
 
 2 Examples, 0 Failed, 2 Pending
-</pre>
+</pre>
+</div>
