--- a/_includes/timestamp.html
+++ b/_includes/timestamp.html
@@ -1,1 +1,1 @@
-Sample code and output automatically executed against nspec version 0.9.61 on 2012-06-30 23:24:17 -0500
+Sample code and output automatically executed against nspec version 0.9.61 on 2012-06-30 23:26:43 -0500.
