--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <title>NSpec - BDD style testing in .Net</title>
     <meta name="google-site-verification" content="V0-9AwoJMWr4-GfiivScydZbSbwLfmaLUmWFoQ9j99w">
-    <link href="/NSpec/stylesheets/shCore.css" rel="stylesheet" type="text/css">
-    <link href="/NSpec/stylesheets/shThemeRDark.css" rel="stylesheet" type="text/css">
-    <link href="/NSpec/stylesheets/Site.css" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/shCore.css" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/shThemeRDark.css" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/Site.css" rel="stylesheet" type="text/css">
     <link href="Media/Default/favicon/favicon.png" rel="shortcut icon" type="image/x-icon">
     <link href="http://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200,300,400,700" rel="stylesheet" type="text/css">
-    <script src="/NSpec/javascripts/shCore.js" type="text/javascript"></script>
-    <script src="/NSpec/javascripts/shAutoloader.js" type="text/javascript"></script>
-    <script src="/NSpec/javascripts/autoloader.js" type="text/javascript"></script>
-    <script src="/NSpec/javascripts/jquery-1.4.2.min.js" type="text/javascript"></script>
-    <script src="/NSpec/javascripts/html5.js" type="text/javascript"></script>
+    <script src="/javascripts/shCore.js" type="text/javascript"></script>
+    <script src="/javascripts/shAutoloader.js" type="text/javascript"></script>
+    <script src="/javascripts/autoloader.js" type="text/javascript"></script>
+    <script src="/javascripts/jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="/javascripts/html5.js" type="text/javascript"></script>
     <script>
       (function(d){d.className="dyn"+d.className.substring(6,d.className.length);})(document.documentElement);
     </script>
@@ -29,7 +29,7 @@
       <header id="layout-header" class="group"><div id="header">
         <div class="zone zone-header">
           <div style="margin-bottom: 0px">
-            <img src="/NSpec/images/logo.png" style="margin-right: 10px; margin-bottom: 0px; float: left">
+            <img src="/images/logo.png" style="margin-right: 10px; margin-bottom: 0px; float: left">
             <h1 id="branding" style="padding-top: 35px;">NSpec - BDD style testing in .Net</h1>
           </div>
         </div>
@@ -40,12 +40,12 @@
         <nav>
           <ul class="menu menu-main">
             <li class="current">
-              <a href="/NSpec/">Home</a>
+              <a href="/">Home</a>
             </li>
-            <li><a href="/NSpec/continuoustesting">Continuous Testing</a></li>
+            <li><a href="/continuoustesting">Continuous Testing</a></li>
             <li><a href="https://github.com/mattflo/NSpec/issues">Feedback</a></li>
             <li><a href="https://github.com/mattflo/NSpec/downloads">Download</a></li>
-            <li><a href="/NSpec/about">About Us</a></li>
+            <li><a href="/about">About Us</a></li>
         </ul>
         </nav>
       </div>
@@ -63,7 +63,7 @@
         <footer id="footer"><div id="footer-sig" class="group">
         </footer>
     </div>
-    <script type="text/javascript">syntaxHighlight('/NSpec/Modules/Heikura.SyntaxHighlighter/Scripts/')</script><script type="text/javascript">
+    <script type="text/javascript">syntaxHighlight('/Modules/Heikura.SyntaxHighlighter/Scripts/')</script><script type="text/javascript">
 
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-22221376-1']);
