--- a/_includes/contexts.html
+++ b/_includes/contexts.html
@@ -3,10 +3,11 @@
 <h1>contexts</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_contexts_code" data-timestamp="2012-10-24 21:06:21 -0500" class="brush: csharp;">using NSpec;
+<pre id="describe_contexts_code" data-timestamp="2012-10-25 08:37:48 -0500" class="brush: csharp;">using NSpec;
 
 class describe_contexts : nspec
 {
+    //context methods require an underscore. For more info see DefaultConventions.cs.
     void describe_Account()
     {
         //contexts can be nested n-deep and contain befores and specifications
@@ -28,7 +29,7 @@ class describe_contexts : nspec
     private Account account;
 }
 </pre>
-<pre id="describe_contexts_output" data-timestamp="2012-10-24 21:06:21 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe contexts
+<pre id="describe_contexts_output" data-timestamp="2012-10-25 08:37:48 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe contexts
   describe Account
     when withdrawing cash
       account is in credit
