--- a/_includes/helpers.html
+++ b/_includes/helpers.html
@@ -3,7 +3,7 @@
 <h1>helpers</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_helpers_code" data-timestamp="2012-10-24 21:06:22 -0500" class="brush: csharp;">using NSpec;
+<pre id="describe_helpers_code" data-timestamp="2012-10-25 08:37:49 -0500" class="brush: csharp;">using NSpec;
 
 class describe_helpers : nspec
 {
@@ -20,13 +20,14 @@ class describe_helpers : nspec
             it[&quot;should be cold&quot;] = () =&gt; tea.Taste().should_be(&quot;cold&quot;);
         };
     }
+    //helper methods do not have underscores
     void MakeTea(int temperature)
     {
         tea = new Tea(temperature);
     }
     Tea tea;
 }</pre>
-<pre id="describe_helpers_output" data-timestamp="2012-10-24 21:06:22 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe helpers
+<pre id="describe_helpers_output" data-timestamp="2012-10-25 08:37:49 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe helpers
   when making tea
     that is 210 degrees
       should be hot
