--- a/_includes/act.html
+++ b/_includes/act.html
@@ -3,8 +3,9 @@
 <h1>act</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_act_code" data-timestamp="2013-04-15 12:53:36 -0500" class="brush: csharp;">﻿using NSpec;
+<pre id="describe_act_code" data-timestamp="2013-04-15 13:51:52 -0500" class="brush: csharp;">﻿using NSpec;
 
+[Tag(&quot;describe_act&quot;)]
 class describe_batman_sound_effects_as_text : nspec
 {
     void they_are_loud_and_emphatic()
@@ -28,6 +29,13 @@ class describe_batman_sound_effects_as_text : nspec
     string sound;
 }
 </pre>
-<pre id="describe_act_output" data-timestamp="2013-04-15 12:53:36 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">0 Examples, 0 Failed, 0 Pending
+<pre id="describe_act_output" data-timestamp="2013-04-15 13:51:52 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe batman sound effects as text
+  they are loud and emphatic
+    given bam
+      should be BAM!!!
+    given whack
+      should be WHACK!!!
+
+2 Examples, 0 Failed, 0 Pending
 </pre>
 </div>
