--- a/_includes/pending.html
+++ b/_includes/pending.html
@@ -3,19 +3,19 @@
 <h1>pending</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_pending_code" data-timestamp="2013-07-03 11:51:47 -0500" class="brush: csharp;">using NSpec;
+<pre id="describe_pending_code" data-timestamp="2014-07-21 17:12:36 -0500" class="brush: csharp;">using NSpec;
 
 class describe_pending : nspec
 {
     void when_creating_pending_specifications()
     {
         it[&quot;pending spec&quot;] = todo;
-        //or just add an 'x' at the beginning of a specification that isn't quite ready
+        //or just add an &#39;x&#39; at the beginning of a specification that isn&#39;t quite ready
         xit[&quot;\&quot;\&quot; should be \&quot;something else\&quot;&quot;] = () =&gt; &quot;&quot;.should_be(&quot;something else&quot;);
     }
 }
 </pre>
-<pre id="describe_pending_output" data-timestamp="2013-07-03 11:51:47 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe pending
+<pre id="describe_pending_output" data-timestamp="2014-07-21 17:12:36 -0500" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe pending
   when creating pending specifications
     pending spec - PENDING
     &quot;&quot; should be &quot;something else&quot; - PENDING
