initial work for new website stuff #91

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,66 +4,15 @@
     <meta charset="utf-8">
     <title>NSpec - BDD style testing in .Net</title>
     <meta name="google-site-verification" content="V0-9AwoJMWr4-GfiivScydZbSbwLfmaLUmWFoQ9j99w">
-    <link href="/stylesheets/shCore.css" rel="stylesheet" type="text/css">
-    <link href="/stylesheets/shThemeRDark.css" rel="stylesheet" type="text/css">
-    <link href="/stylesheets/Site.css" rel="stylesheet" type="text/css">
     <link href="Media/Default/favicon/favicon.png" rel="shortcut icon" type="image/x-icon">
     <link href="http://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200,300,400,700" rel="stylesheet" type="text/css">
-    <script src="/javascripts/shCore.js" type="text/javascript"></script>
-    <script src="/javascripts/shAutoloader.js" type="text/javascript"></script>
-    <script src="/javascripts/autoloader.js" type="text/javascript"></script>
-    <script src="/javascripts/jquery-1.4.2.min.js" type="text/javascript"></script>
-    <script src="/javascripts/html5.js" type="text/javascript"></script>
-    <script>
-      (function(d){d.className="dyn"+d.className.substring(6,d.className.length);})(document.documentElement);
-    </script>
   </head>
   <body>
-    <a href="http://github.com/mattflo/nspec">
-      <img style="position: absolute; top: 0; right: 0; border: 0; z-index: 1000" 
-      src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"
-      alt="Fork me on GitHub">
-    </a>
-    <div class="tripel-123" id="layout-wrapper">
-      <header id="layout-header" class="group"><div id="header">
-        <div class="zone zone-header">
-          <div style="margin-bottom: 0px">
-            <img src="/images/logo.png" style="margin-right: 10px; margin-bottom: 0px; float: left">
-            <h1 id="branding" style="padding-top: 35px;">NSpec - BDD style testing in .Net</h1>
-          </div>
-        </div>
-    </header>
-    </div>
-    <div id="layout-navigation" class="group">
-      <div class="zone zone-navigation">
-        <nav>
-          <ul class="menu menu-main">
-            <li class="current">
-              <a href="/">Home</a>
-            </li>
-            <li><a href="/continuoustesting">Continuous Testing</a></li>
-            <li><a href="https://github.com/mattflo/NSpec/issues">Feedback</a></li>
-            <li><a href="https://github.com/mattflo/NSpec/downloads">Download</a></li>
-            <li><a href="/about">About Us</a></li>
-        </ul>
-        </nav>
-      </div>
-    </div>
-    <div id="layout-main" class="group">
-      <div id="content" class="group">
-        <div id="layout-content" class="group">
-          {{ content }}
-        </div>
-      </div>
-    </div>
+    <h1>NSpec - BDD style testing in .Net</h1>
+    {{ content }}
 
-
-    <div id="layout-footer" class="group">
-        <footer id="footer"><div id="footer-sig" class="group">
-        </footer>
-    </div>
-    <script type="text/javascript">syntaxHighlight('/Modules/Heikura.SyntaxHighlighter/Scripts/')</script><script type="text/javascript">
+    <script type="text/javascript">
 
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-22221376-1']);
@@ -78,4 +27,3 @@
     </script>
   </body>
 </html>
-
