still working on website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>NSpec - BDD style testing in .Net</title>
+    <title>NSpec - RSpec/Mocha Clone for .Net</title>
     <meta name="google-site-verification" content="V0-9AwoJMWr4-GfiivScydZbSbwLfmaLUmWFoQ9j99w">
     <link href="Media/Default/favicon/favicon.png" rel="shortcut icon" type="image/x-icon">
-    <link href="http://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200,300,400,700" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/Site.css" rel="stylesheet">
   </head>
   <body>
-    <h1>NSpec - BDD style testing in .Net</h1>
+    <img src="/images/logo.png" style="float: right;">
+    <h1>NSpec - RSpec/Mocha Clone for .Net</h1>
+    <hr />
     {{ content }}
 
     <script type="text/javascript">
