--- a/_includes/async_helpers.html
+++ b/_includes/async_helpers.html
@@ -3,9 +3,9 @@
 <h1>async helpers</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_async_helpers_code" data-timestamp="2016-04-26 16:08:28 -0600" class="brush: csharp;">using NSpec;
+<pre id="describe_async_helpers_code" data-timestamp="2016-04-26 16:12:03 -0600" class="brush: csharp;">using NSpec;
 using System.Threading.Tasks;
-class describe_async_helpers : nspec
+\nclass describe_async_helpers : nspec
 {
     void when_making_tea()
     {
@@ -29,24 +29,8 @@ class describe_async_helpers : nspec
 
     Tea tea;
 }
-
-public static class describe_async_helpers_output
-{
-    public static string Output = @&quot;
-describe async helpers
-  when making tea
-    that is 210 degrees
-      should be hot
-    that is 90 degrees
-      should be cold
-
-2 Examples, 0 Failed, 0 Pending
-&quot;;
-
-    public static int ExitCode = 0;
-}
 </pre>
-<pre id="describe_async_helpers_output" data-timestamp="2016-04-26 16:08:28 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe async helpers
+<pre id="describe_async_helpers_output" data-timestamp="2016-04-26 16:12:03 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe async helpers
   when making tea
     that is 210 degrees
       should be hot
