--- a/_includes/before.html
+++ b/_includes/before.html
@@ -3,8 +3,8 @@
 <h1>before</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_before_code" data-timestamp="2016-04-26 16:08:28 -0600" class="brush: csharp;">using NSpec;
-class describe_before : nspec
+<pre id="describe_before_code" data-timestamp="2016-04-26 16:12:04 -0600" class="brush: csharp;">using NSpec;
+\nclass describe_before : nspec
 {
     void they_run_before_each_example()
     {
@@ -16,21 +16,8 @@ class describe_before : nspec
     }
     int number;
 }
-
-public static class describe_before_output
-{
-    public static string Output = @&quot;
-describe before
-  they run before each example
-    number should be 2
-    number should be 1
-
-2 Examples, 0 Failed, 0 Pending
-&quot;;
-    public static int ExitCode = 0;
-}
 </pre>
-<pre id="describe_before_output" data-timestamp="2016-04-26 16:08:28 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe before
+<pre id="describe_before_output" data-timestamp="2016-04-26 16:12:04 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe before
   they run before each example
     number should be 2
     number should be 1
