--- a/_includes/changing_failure_exception.html
+++ b/_includes/changing_failure_exception.html
@@ -3,12 +3,12 @@
 <h1>changing failure exception</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_changing_failure_exception_code" data-timestamp="2016-04-26 16:08:28 -0600" class="brush: csharp;">﻿using System;
+<pre id="describe_changing_failure_exception_code" data-timestamp="2016-04-26 16:12:04 -0600" class="brush: csharp;">﻿using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Text;
 using NSpec;
-class describe_changing_failure_exception : nspec
+\nclass describe_changing_failure_exception : nspec
 {
     void given_a_context_that_throws_an_exception()
     {
@@ -21,25 +21,8 @@ class describe_changing_failure_exception : nspec
         return new InvalidOperationException(&quot;A more detailed exception message.&quot;, originalException);
     }
 }
-
-public static class describe_changing_failure_exception_output
-{
-    public static string Output = @&quot;
-describe changing failure exception
-  given a context that throws an exception
-    the exception can be changed to provide out of proc information - FAILED - A more detailed exception message.
-
-**** FAILURES ****
-
-nspec. describe changing failure exception. given a context that throws an exception. the exception can be changed to provide out of proc information.
-A more detailed exception message.
-
-1 Examples, 1 Failed, 0 Pending
-&quot;;
-    public static int ExitCode = 1;
-}
 </pre>
-<pre id="describe_changing_failure_exception_output" data-timestamp="2016-04-26 16:08:28 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe changing failure exception
+<pre id="describe_changing_failure_exception_output" data-timestamp="2016-04-26 16:12:04 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe changing failure exception
   given a context that throws an exception
     the exception can be changed to provide out of proc information - FAILED - A more detailed...
 
