--- a/_includes/changing_stacktrace_message.html
+++ b/_includes/changing_stacktrace_message.html
@@ -3,12 +3,12 @@
 <h1>changing stacktrace message</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_changing_stacktrace_message_code" data-timestamp="2016-04-26 16:08:29 -0600" class="brush: csharp;">﻿using System;
+<pre id="describe_changing_stacktrace_message_code" data-timestamp="2016-04-26 16:12:04 -0600" class="brush: csharp;">﻿using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Text;
 using NSpec;
-class describe_changing_stacktrace_message : nspec
+\nclass describe_changing_stacktrace_message : nspec
 {
     void given_a_context_that_throws_an_exception()
     {
@@ -23,26 +23,8 @@ class describe_changing_stacktrace_message : nspec
         return flattenedStackTrace + &quot;More Information to help diagnose issue\n&quot;;
     }
 }
-
-public static class describe_changing_stacktrace_message_output
-{
-    public static string Output = @&quot;
-describe changing stacktrace message
-  given a context that throws an exception
-    the stack trace can be altered to provide more information - FAILED - An exception was thrown
-
-**** FAILURES ****
-
-nspec. describe changing stacktrace message. given a context that throws an exception. the stack trace can be altered to provide more information.
-An exception was thrown
-More Information to help diagnose issue
-
-1 Examples, 1 Failed, 0 Pending
-&quot;;
-    public static int ExitCode = 1;
-}
 </pre>
-<pre id="describe_changing_stacktrace_message_output" data-timestamp="2016-04-26 16:08:29 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe changing stacktrace message
+<pre id="describe_changing_stacktrace_message_output" data-timestamp="2016-04-26 16:12:04 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe changing stacktrace message
   given a context that throws an exception
     the stack trace can be altered to provide more information - FAILED - An exception was thr...
 
