--- a/_includes/contexts.html
+++ b/_includes/contexts.html
@@ -3,8 +3,8 @@
 <h1>contexts</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_contexts_code" data-timestamp="2016-04-26 16:08:29 -0600" class="brush: csharp;">using NSpec;
-class describe_contexts : nspec
+<pre id="describe_contexts_code" data-timestamp="2016-04-26 16:12:05 -0600" class="brush: csharp;">using NSpec;
+\nclass describe_contexts : nspec
 {
     //context methods require an underscore. For more info see DefaultConventions.cs.
     void describe_Account()
@@ -27,24 +27,8 @@ class describe_contexts : nspec
     }
     private Account account;
 }
-
-public static class describe_contexts_output
-{
-    public static string Output = @&quot;
-describe contexts
-  describe Account
-    when withdrawing cash
-      account is in credit
-        the Account dispenses cash
-      account is overdrawn
-        the Account does not dispense cash
-
-2 Examples, 0 Failed, 0 Pending
-&quot;;
-    public static int ExitCode = 0;
-}
 </pre>
-<pre id="describe_contexts_output" data-timestamp="2016-04-26 16:08:29 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe contexts
+<pre id="describe_contexts_output" data-timestamp="2016-04-26 16:12:05 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe contexts
   describe Account
     when withdrawing cash
       account is in credit
