--- a/_includes/helpers.html
+++ b/_includes/helpers.html
@@ -3,8 +3,8 @@
 <h1>helpers</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_helpers_code" data-timestamp="2016-04-26 16:08:30 -0600" class="brush: csharp;">using NSpec;
-class describe_helpers : nspec
+<pre id="describe_helpers_code" data-timestamp="2016-04-26 16:12:05 -0600" class="brush: csharp;">using NSpec;
+\nclass describe_helpers : nspec
 {
     void when_making_tea()
     {
@@ -25,23 +25,8 @@ class describe_helpers : nspec
         tea = new Tea(temperature);
     }
     Tea tea;
-}
-public static class describe_helpers_output
-{
-    public static string Output = @&quot;
-describe helpers
-  when making tea
-    that is 210 degrees
-      should be hot
-    that is 90 degrees
-      should be cold
-
-2 Examples, 0 Failed, 0 Pending
-&quot;;
-    public static int ExitCode = 0;
-}
-</pre>
-<pre id="describe_helpers_output" data-timestamp="2016-04-26 16:08:30 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe helpers
+}</pre>
+<pre id="describe_helpers_output" data-timestamp="2016-04-26 16:12:05 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe helpers
   when making tea
     that is 210 degrees
       should be hot
