--- a/_includes/inheritance.html
+++ b/_includes/inheritance.html
@@ -3,9 +3,9 @@
 <h1>inheritance</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_inheritance_code" data-timestamp="2016-04-26 16:08:30 -0600" class="brush: csharp;">﻿using NSpec;
+<pre id="describe_inheritance_code" data-timestamp="2016-04-26 16:12:06 -0600" class="brush: csharp;">﻿using NSpec;
 
-[Tag(&quot;describe_inheritance&quot;)]class given_the_sequence_continues_with_2 : given_the_sequence_starts_with_1
+[Tag(&quot;describe_inheritance&quot;)]\nclass given_the_sequence_continues_with_2 : given_the_sequence_starts_with_1
 {
     void before_each()
     {
@@ -20,7 +20,7 @@
             () =&gt; sequence.should_be(&quot;123&quot;);
     }
 }
-class given_the_sequence_starts_with_1 : nspec
+\nclass given_the_sequence_starts_with_1 : nspec
 {
     void before_each()
     {
@@ -28,21 +28,8 @@ class given_the_sequence_starts_with_1 : nspec
     }
     protected string sequence;
 }
-
-public static class given_the_sequence_continues_with_2_output
-{
-    public static string Output = @&quot;
-given the sequence starts with 1
-  given the sequence continues with 2
-    given the sequence continues with 3
-      sequence should be &quot;&quot;123&quot;&quot;
-
-1 Examples, 0 Failed, 0 Pending
-&quot;;
-    public static int ExitCode = 0;
-}
 </pre>
-<pre id="describe_inheritance_output" data-timestamp="2016-04-26 16:08:30 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">given the sequence starts with 1
+<pre id="describe_inheritance_output" data-timestamp="2016-04-26 16:12:06 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">given the sequence starts with 1
   given the sequence continues with 2
     given the sequence continues with 3
       sequence should be &quot;123&quot;
