--- a/_includes/changing_failure_exception.html
+++ b/_includes/changing_failure_exception.html
@@ -3,12 +3,13 @@
 <h1>changing failure exception</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_changing_failure_exception_code" data-timestamp="2016-04-26 16:12:04 -0600" class="brush: csharp;">﻿using System;
+<pre id="describe_changing_failure_exception_code" data-timestamp="2016-04-26 16:13:50 -0600" class="brush: csharp;">﻿using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Text;
 using NSpec;
-\nclass describe_changing_failure_exception : nspec
+
+class describe_changing_failure_exception : nspec
 {
     void given_a_context_that_throws_an_exception()
     {
@@ -22,7 +23,7 @@ using NSpec;
     }
 }
 </pre>
-<pre id="describe_changing_failure_exception_output" data-timestamp="2016-04-26 16:12:04 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe changing failure exception
+<pre id="describe_changing_failure_exception_output" data-timestamp="2016-04-26 16:13:50 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe changing failure exception
   given a context that throws an exception
     the exception can be changed to provide out of proc information - FAILED - A more detailed...
 
