--- a/_includes/exception.html
+++ b/_includes/exception.html
@@ -3,9 +3,10 @@
 <h1>exception</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_exception_code" data-timestamp="2016-04-26 16:12:05 -0600" class="brush: csharp;">﻿using System;
+<pre id="describe_exception_code" data-timestamp="2016-04-26 16:13:52 -0600" class="brush: csharp;">﻿using System;
 using NSpec;
-\nclass describe_exception : nspec
+
+class describe_exception : nspec
 {
     void given_a_null_string()
     {
@@ -15,7 +16,7 @@ using NSpec;
     string nullString = null;
 }
 </pre>
-<pre id="describe_exception_output" data-timestamp="2016-04-26 16:12:05 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe exception
+<pre id="describe_exception_output" data-timestamp="2016-04-26 16:13:52 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe exception
   given a null string
     should throw null-ref
 
