--- a/_includes/pending.html
+++ b/_includes/pending.html
@@ -3,8 +3,9 @@
 <h1>pending</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_pending_code" data-timestamp="2016-04-26 16:12:06 -0600" class="brush: csharp;">using NSpec;
-\nclass describe_pending : nspec
+<pre id="describe_pending_code" data-timestamp="2016-04-26 16:13:53 -0600" class="brush: csharp;">using NSpec;
+
+class describe_pending : nspec
 {
     void when_creating_pending_specifications()
     {
@@ -14,7 +15,7 @@
     }
 }
 </pre>
-<pre id="describe_pending_output" data-timestamp="2016-04-26 16:12:06 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe pending
+<pre id="describe_pending_output" data-timestamp="2016-04-26 16:13:53 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe pending
   when creating pending specifications
     pending spec - PENDING
     &quot;&quot; should be &quot;something else&quot; - PENDING
