--- a/_includes/specifications.html
+++ b/_includes/specifications.html
@@ -3,8 +3,9 @@
 <h1>specifications</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_specifications_code" data-timestamp="2016-04-26 16:12:07 -0600" class="brush: csharp;">using NSpec;
-\nclass describe_specifications : nspec
+<pre id="describe_specifications_code" data-timestamp="2016-04-26 16:13:53 -0600" class="brush: csharp;">using NSpec;
+
+class describe_specifications : nspec
 {
     void when_creating_specifications()
     {
@@ -26,7 +27,7 @@
     object someObject = null;
 }
 </pre>
-<pre id="describe_specifications_output" data-timestamp="2016-04-26 16:12:07 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe specifications
+<pre id="describe_specifications_output" data-timestamp="2016-04-26 16:13:53 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe specifications
   when creating specifications
     true should be false - FAILED - Expected: False
 , But was: True
