--- a/_includes/act.html
+++ b/_includes/act.html
@@ -3,9 +3,10 @@
 <h1>act</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_act_code" data-timestamp="2016-04-26 16:12:03 -0600" class="brush: csharp;">﻿using NSpec;
+<pre id="describe_act_code" data-timestamp="2016-04-26 16:13:49 -0600" class="brush: csharp;">﻿using NSpec;
 
-[Tag(&quot;describe_act&quot;)]\nclass describe_batman_sound_effects_as_text : nspec
+[Tag(&quot;describe_act&quot;)]
+class describe_batman_sound_effects_as_text : nspec
 {
     void they_are_loud_and_emphatic()
     {
@@ -28,7 +29,7 @@
     string sound;
 }
 </pre>
-<pre id="describe_act_output" data-timestamp="2016-04-26 16:12:03 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe batman sound effects as text
+<pre id="describe_act_output" data-timestamp="2016-04-26 16:13:49 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe batman sound effects as text
   they are loud and emphatic
     given bam
       should be BAM!!!
