--- a/_includes/async_helpers.html
+++ b/_includes/async_helpers.html
@@ -3,9 +3,10 @@
 <h1>async helpers</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_async_helpers_code" data-timestamp="2016-04-26 16:12:03 -0600" class="brush: csharp;">using NSpec;
+<pre id="describe_async_helpers_code" data-timestamp="2016-04-26 16:13:50 -0600" class="brush: csharp;">using NSpec;
 using System.Threading.Tasks;
-\nclass describe_async_helpers : nspec
+
+class describe_async_helpers : nspec
 {
     void when_making_tea()
     {
@@ -30,7 +31,7 @@ using System.Threading.Tasks;
     Tea tea;
 }
 </pre>
-<pre id="describe_async_helpers_output" data-timestamp="2016-04-26 16:12:03 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe async helpers
+<pre id="describe_async_helpers_output" data-timestamp="2016-04-26 16:13:50 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe async helpers
   when making tea
     that is 210 degrees
       should be hot
