--- a/_includes/changing_stacktrace_message.html
+++ b/_includes/changing_stacktrace_message.html
@@ -3,12 +3,13 @@
 <h1>changing stacktrace message</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_changing_stacktrace_message_code" data-timestamp="2016-04-26 16:12:04 -0600" class="brush: csharp;">﻿using System;
+<pre id="describe_changing_stacktrace_message_code" data-timestamp="2016-04-26 16:13:51 -0600" class="brush: csharp;">﻿using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Text;
 using NSpec;
-\nclass describe_changing_stacktrace_message : nspec
+
+class describe_changing_stacktrace_message : nspec
 {
     void given_a_context_that_throws_an_exception()
     {
@@ -24,7 +25,7 @@ using NSpec;
     }
 }
 </pre>
-<pre id="describe_changing_stacktrace_message_output" data-timestamp="2016-04-26 16:12:04 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe changing stacktrace message
+<pre id="describe_changing_stacktrace_message_output" data-timestamp="2016-04-26 16:13:51 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe changing stacktrace message
   given a context that throws an exception
     the stack trace can be altered to provide more information - FAILED - An exception was thr...
 
