--- a/_includes/my_first_spec.html
+++ b/_includes/my_first_spec.html
@@ -3,8 +3,9 @@
 <h1>my first spec</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="my_first_spec_code" data-timestamp="2016-04-26 16:12:07 -0600" class="brush: csharp;">﻿using NSpec;
-\nclass my_first_spec : nspec
+<pre id="my_first_spec_code" data-timestamp="2016-04-26 16:13:54 -0600" class="brush: csharp;">﻿using NSpec;
+
+class my_first_spec : nspec
 {
     void given_the_world_has_not_come_to_an_end()
     {
@@ -12,7 +13,7 @@
     }
 }
 </pre>
-<pre id="my_first_spec_output" data-timestamp="2016-04-26 16:12:07 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">my first spec
+<pre id="my_first_spec_output" data-timestamp="2016-04-26 16:13:54 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">my first spec
   given the world has not come to an end
     Hello World should be Hello World
 
