--- a/_includes/async_helpers.html
+++ b/_includes/async_helpers.html
@@ -3,40 +3,15 @@
 <h1>async helpers</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_async_helpers_code" data-timestamp="2015-10-04 17:01:48 -0600" class="brush: csharp;">using NSpec;
+<pre id="describe_async_helpers_code" data-timestamp="2016-09-26 10:18:58 -0600" class="brush: csharp;">using NSpec;
 using System.Threading.Tasks;
-
-class describe_async_helpers : nspec
-{
-    void when_making_tea()
-    {
-        context[&quot;that is 210 degrees&quot;] = () =&gt;
-        {
-            beforeAsync = async () =&gt; await MakeTeaAsync(210);
-            it[&quot;should be hot&quot;] = () =&gt; tea.Taste().should_be(&quot;hot&quot;);
-        };
-        context[&quot;that is 90 degrees&quot;] = () =&gt;
-        {
-            beforeAsync = async () =&gt; await MakeTeaAsync(90);
-            it[&quot;should be cold&quot;] = () =&gt; tea.Taste().should_be(&quot;cold&quot;);
-        };
-    }
-
-    //helper methods do not have underscores
-    async Task MakeTeaAsync(int temperature)
-    {
-        tea = await Task.Run(() =&gt; new Tea(temperature));
-    }
-
-    Tea tea;
-}
 </pre>
-<pre id="describe_async_helpers_output" data-timestamp="2015-10-04 17:01:48 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe async helpers
+<pre id="describe_async_helpers_output" data-timestamp="2016-09-26 10:18:58 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe async helpers
   when making tea
     that is 210 degrees
-      should be hot
+      should be hot (12ms)
     that is 90 degrees
-      should be cold
+      should be cold (1ms)
 
 2 Examples, 0 Failed, 0 Pending
 </pre>
