--- a/_includes/exception.html
+++ b/_includes/exception.html
@@ -3,22 +3,12 @@
 <h1>exception</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_exception_code" data-timestamp="2015-10-04 17:01:50 -0600" class="brush: csharp;">﻿using System;
+<pre id="describe_exception_code" data-timestamp="2016-09-26 10:19:00 -0600" class="brush: csharp;">﻿using System;
 using NSpec;
-
-class describe_exception : nspec
-{
-    void given_a_null_string()
-    {
-        it[&quot;should throw null-ref&quot;] =
-            expect&lt;NullReferenceException&gt;(() =&gt; nullString.Trim());
-    }
-    string nullString = null;
-}
 </pre>
-<pre id="describe_exception_output" data-timestamp="2015-10-04 17:01:50 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe exception
+<pre id="describe_exception_output" data-timestamp="2016-09-26 10:19:00 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe exception
   given a null string
-    should throw null-ref
+    should throw null-ref (2ms)
 
 1 Examples, 0 Failed, 0 Pending
 </pre>
