--- a/_includes/helpers.html
+++ b/_includes/helpers.html
@@ -3,36 +3,14 @@
 <h1>helpers</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="describe_helpers_code" data-timestamp="2015-10-04 17:01:50 -0600" class="brush: csharp;">using NSpec;
-
-class describe_helpers : nspec
-{
-    void when_making_tea()
-    {
-        context[&quot;that is 210 degrees&quot;] = () =&gt;
-        {
-            before = () =&gt; MakeTea(210);
-            it[&quot;should be hot&quot;] = () =&gt; tea.Taste().should_be(&quot;hot&quot;);
-        };
-        context[&quot;that is 90 degrees&quot;] = () =&gt;
-        {
-            before = () =&gt; MakeTea(90);
-            it[&quot;should be cold&quot;] = () =&gt; tea.Taste().should_be(&quot;cold&quot;);
-        };
-    }
-    //helper methods do not have underscores
-    void MakeTea(int temperature)
-    {
-        tea = new Tea(temperature);
-    }
-    Tea tea;
-}</pre>
-<pre id="describe_helpers_output" data-timestamp="2015-10-04 17:01:50 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe helpers
+<pre id="describe_helpers_code" data-timestamp="2016-09-26 10:19:01 -0600" class="brush: csharp;">using NSpec;
+</pre>
+<pre id="describe_helpers_output" data-timestamp="2016-09-26 10:19:01 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">describe helpers
   when making tea
     that is 210 degrees
-      should be hot
+      should be hot (7ms)
     that is 90 degrees
-      should be cold
+      should be cold (0ms)
 
 2 Examples, 0 Failed, 0 Pending
 </pre>
