--- a/_includes/my_first_spec.html
+++ b/_includes/my_first_spec.html
@@ -3,19 +3,11 @@
 <h1>my first spec</h1>
 </div>
 <div id="layout-content" class="group" style="padding-top: 10px;">
-<pre id="my_first_spec_code" data-timestamp="2015-10-04 17:01:51 -0600" class="brush: csharp;">﻿using NSpec;
-
-class my_first_spec : nspec
-{
-    void given_the_world_has_not_come_to_an_end()
-    {
-        it[&quot;Hello World should be Hello World&quot;] = () =&gt; &quot;Hello World&quot;.should_be(&quot;Hello World&quot;);
-    }
-}
+<pre id="my_first_spec_code" data-timestamp="2016-09-26 10:19:02 -0600" class="brush: csharp;">﻿using NSpec;
 </pre>
-<pre id="my_first_spec_output" data-timestamp="2015-10-04 17:01:51 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">my first spec
+<pre id="my_first_spec_output" data-timestamp="2016-09-26 10:19:02 -0600" style="font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;">my first spec
   given the world has not come to an end
-    Hello World should be Hello World
+    Hello World should be Hello World (7ms)
 
 1 Examples, 0 Failed, 0 Pending
 </pre>
