docs(header): update github href to nspec organization

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
     <div style="font-size: 22px; line-height: 28px;">
         NSpec is a battle hardened testing framework for C# that's heavily inspired by Mocha
-        and RSpec. It has a fancy logo, is released under the MIT License, and is an <a href="http://github.com/mattflo/nspec">OSS project</a>.
+        and RSpec. It has a fancy logo, is released under the MIT License, and is an <a href="https://github.com/nspec/NSpec">OSS project</a>.
     </div>
 
 
