style(code): avoid padding in code blocks
Avoid the effect visible in [this screenshot](http://imgur.com/a/10b8E)

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -67,6 +67,11 @@ pre {
   word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
+pre > code {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 iframe {
   max-width: 100%;
   display: block;
