chore(syntax): try adding GitHub syntax stylesheet

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <meta name="author" content="{{ site.author.name }}">
     <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
     <link href="/assets/css/site.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/assets/css/syntax.css" rel="stylesheet" type="text/css" media="all">
   </head>
 
   <body>
